fixed issue with navigation bar not showing

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -25,6 +25,7 @@ color: #000000;
 	transition: top 0.3s;
 	z-index: 99999;
 	width: 100%;
+	overflow: hidden;
 }
 
 #navbar a {
